--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   </header>
 
   <main>
+    <div class="score">
+      <span>Number of guesses: <span id="guess-count">0</span></span>
+    </div>
     <div id="game"></div>
     <div class="buttons">
       <button id="start-btn">Start Game</button>
