more styling and added sweetalert modal

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </main>
 
   <script src="memory-game.js"></script>
-
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
