--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="memory-game.css" />
+  <script src="https://kit.fontawesome.com/301d6ba936.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,6 +27,12 @@
       <button id="reset-btn" disabled>Reset Game</button>
     </div>
   </main>
+  <footer>
+    <span>&copy; Ross Brown 2023</span>
+    <a class="social-icon" href="https://www.linkedin.com/in/ross-brown-/"><i
+        class="fa-brands fa-linkedin fa-xl"></i></a>
+    <a class="social-icon" href="https://github.com/ross-brown"><i class="fa-brands fa-github fa-xl"></i></a>
+  </footer>
 
   <script src="memory-game.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
