add low score counter with local storage

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <button id="reset-btn" disabled>Reset Game</button>
     </div>
   </main>
+  <div class="scoreboard">
+    <p>Lowest Score: <span id="low-score">0</span></p>
+  </div>
   <footer>
     <span>&copy; Ross Brown 2023</span>
     <a class="social-icon" href="https://www.linkedin.com/in/ross-brown-/"><i
