add dropdown to chnage amount of cards

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <div id="game"></div>
     <div class="buttons">
       <button id="start-btn">Start Game</button>
+      <select class="card-dropdown">
+        <option value="8">8</option>
+        <option value="12" selected>12</option>
+      </select>
       <button id="reset-btn" disabled>Reset Game</button>
     </div>
   </main>
