add fastest time to local storage and html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </main>
   <div class="scoreboard">
     <p>Lowest Score: <span id="low-score">0</span></p>
+    <p>Fastest Time: <span id="fast-time">0</span> sec</p>
   </div>
   <footer>
     <span>&copy; Ross Brown 2023</span>
