change drop down from nums to difficulty level

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="buttons">
       <button id="start-btn">Start Game</button>
       <select class="card-dropdown">
-        <option value="8">8</option>
-        <option value="12" selected>12</option>
+        <option value="8">Easy</option>
+        <option value="12" selected>Medium</option>
       </select>
       <button id="reset-btn" disabled>Reset Game</button>
     </div>
