adjust html for scoreboard to maybe have mulitple scores

--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
       <button id="reset-btn" disabled>Reset Game</button>
     </div>
   </main>
-  <div class="scoreboard">
-    <p>Lowest Score: <span id="low-score">0</span></p>
-    <p>Fastest Time: <span id="fast-time">0</span> sec</p>
-  </div>
+  <!-- <div class="score-container"> -->
+    <div class="scoreboard">
+      <p>Lowest Score: <span id="low-score">0</span></p>
+      <p>Fastest Time: <span id="fast-time">0</span> sec</p>
+    </div>
+    <!-- <div class="scoreboard">
+      <p>Lowest Score: <span id="low-score2">0</span></p>
+      <p>Fastest Time: <span id="fast-time2">0</span> sec</p>
+    </div> -->
+  <!-- </div> -->
   <footer>
     <span>&copy; Ross Brown 2023</span>
     <a class="social-icon" href="https://www.linkedin.com/in/ross-brown-/"><i
