--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <select class="card-dropdown">
         <option value="8">Easy</option>
         <option value="12" selected>Medium</option>
+        <option value="16">Hard</option>
       </select>
       <button id="reset-btn" disabled>Reset Game</button>
     </div>
