change font size header scores

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main>
     <div class="score">
-      <span>Number of guesses: <span id="guess-count">0</span></span>
+      <span>Guesses: <span id="guess-count">0</span></span>
       <span>Timer: <span id="timer">0</span> sec</span>
     </div>
     <div id="game"></div>
