add how to play button with modal

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <span>Guesses: <span id="guess-count">0</span></span>
       <span>Timer: <span id="timer">0</span> sec</span>
     </div>
+    <button id="how-to-play">How to Play</button>
     <div id="game"></div>
     <div class="buttons">
       <button id="start-btn">Start Game</button>
