add html and css for low scores for all difficulties

--- a/index.html
+++ b/index.html
@@ -34,16 +34,23 @@
       <button id="reset-btn" disabled>Reset Game</button>
     </div>
   </main>
-  <!-- <div class="score-container"> -->
+  <div class="score-container">
     <div class="scoreboard">
-      <p>Lowest Score: <span id="low-score">0</span></p>
-      <p>Fastest Time: <span id="fast-time">0</span> sec</p>
+      <h3>Easy:</h3>
+      <p>Lowest Score: <span id="low-score-easy">0</span></p>
+      <p>Fastest Time: <span id="fast-time-easy">0</span> sec</p>
     </div>
-    <!-- <div class="scoreboard">
-      <p>Lowest Score: <span id="low-score2">0</span></p>
-      <p>Fastest Time: <span id="fast-time2">0</span> sec</p>
-    </div> -->
-  <!-- </div> -->
+    <div class="scoreboard">
+      <h3>Medium:</h3>
+      <p>Lowest Score: <span id="low-score-med">0</span></p>
+      <p>Fastest Time: <span id="fast-time-med">0</span> sec</p>
+    </div>
+    <div class="scoreboard">
+      <h3>Hard:</h3>
+      <p>Lowest Score: <span id="low-score-hard">0</span></p>
+      <p>Fastest Time: <span id="fast-time-hard">0</span> sec</p>
+    </div>
+  </div>
   <footer>
     <span>&copy; Ross Brown 2023</span>
     <a class="social-icon" href="https://www.linkedin.com/in/ross-brown-/"><i
