add reset low score btn html, css, and js

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <p>Fastest Time: <span id="fast-time-hard">0</span> sec</p>
     </div>
   </div>
+  <button id="reset-scores">Reset Scores</button>
   <footer>
     <span>&copy; Ross Brown 2023</span>
     <a class="social-icon" href="https://www.linkedin.com/in/ross-brown-/"><i
